[gd_scene load_steps=2 format=2]

[ext_resource path="res://TradeMenu.gd" type="Script" id=2]

[node name="TradeMenu" type="MarginContainer"]
margin_left = 40.0
margin_top = 40.0
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 162.0
margin_bottom = 86.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 158.0
margin_bottom = 86.0

[node name="HeaderLabel" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_right = 158.0
margin_bottom = 14.0

[node name="Welcome to" type="Label" parent="HBoxContainer/VBoxContainer/HeaderLabel"]
margin_right = 97.0
margin_bottom = 14.0
text = "--- Welcome to"

[node name="StationName" type="Label" parent="HBoxContainer/VBoxContainer/HeaderLabel"]
margin_left = 101.0
margin_right = 139.0
margin_bottom = 14.0
text = "NAME"

[node name="Welcome to2" type="Label" parent="HBoxContainer/VBoxContainer/HeaderLabel"]
margin_left = 143.0
margin_right = 158.0
margin_bottom = 14.0
text = "---"

[node name="DescLabel" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 158.0
margin_bottom = 32.0

[node name="StationDesc" type="Label" parent="HBoxContainer/VBoxContainer/DescLabel"]
margin_right = 74.0
margin_bottom = 14.0
text = "Description"

[node name="Spacer" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 158.0
margin_bottom = 50.0

[node name="PlayerBalance" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 158.0
margin_bottom = 68.0

[node name="Your Balance" type="Label" parent="HBoxContainer/VBoxContainer/PlayerBalance"]
margin_right = 92.0
margin_bottom = 14.0
text = "Your credits: $"

[node name="CreditsBox" type="Label" parent="HBoxContainer/VBoxContainer/PlayerBalance"]
margin_left = 96.0
margin_right = 104.0
margin_bottom = 14.0
text = "0"

[node name="PlayerHoldSpace" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 158.0
margin_bottom = 86.0

[node name="Hold space" type="Label" parent="HBoxContainer/VBoxContainer/PlayerHoldSpace"]
margin_right = 75.0
margin_bottom = 14.0
text = "Hold space:"

[node name="HoldSpaceBox" type="Label" parent="HBoxContainer/VBoxContainer/PlayerHoldSpace"]
margin_left = 79.0
margin_right = 87.0
margin_bottom = 14.0
text = "0"

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 162.0
margin_right = 162.0
margin_bottom = 86.0
